--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ spring:
     banner-mode: off
 
   datasource:
-    url: jdbc:mysql://localhost:3306/bankapp
+    url: jdbc:mysql://localhost:3306/bankapp?createDatabaseIfNotExist=true
     username: bankapp
-    password: dfgdfgASR123@!
+    password: "dfgdfgASR123@!"
 
   jpa:
     defer-datasource-initialization: false
@@ -13,9 +13,7 @@ spring:
     properties:
       hibernate:
         type: uuid-char
-        ddl-auto: update
         dialect: org.hibernate.dialect.MySQL57Dialect
 
   liquibase:
     change-log: classpath:/db/changelog/changelog-master.xml
-    drop-first: true
